--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -15,7 +15,7 @@ dependencies:
   # Use with the CupertinoIcons class for iOS style icons.
   cupertino_icons: ^0.1.2
 
-  dart_jts: ^0.0.4
+  dart_jts: ^0.0.4+1
 
   # MIT
   sqflite: ^1.1.7+2
@@ -24,6 +24,8 @@ dependencies:
 dev_dependencies:
   flutter_test:
     sdk: flutter
+  pedantic: ^1.8.0+1
+  test: any
 
 flutter:
   uses-material-design: true
