--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -3,6 +3,8 @@ description: A module to support OGC geopackage with sqlite.
 version: 0.0.1
 homepage: https://www.hydrologis.com
 author: Andrea Antonello <andrea.antonello@gmail.com>
+repository: https://github.com/moovida/flutter_geopackage
+issue_tracker: https://github.com/moovida/flutter_geopackage/issues
 
 environment:
   sdk: ">=2.1.0 <3.0.0"
