--- a/example/pubspec.yaml
+++ b/example/pubspec.yaml
@@ -22,10 +22,10 @@ dependencies:
 
   # The following adds the Cupertino Icons font to your application.
   # Use with the CupertinoIcons class for iOS style icons.
-  cupertino_icons: ^0.1.2
+  cupertino_icons: ^0.1.3
 
   # MIT
-  permission_handler: ^3.2.2
+  permission_handler: ^4.0.0
 
   flutter_geopackage:
     path: ../../flutter_geopackage
@@ -62,6 +62,8 @@ flutter:
     - assets/gpkg_metadata_reference.sql
     - assets/gpkg_spatial_index.sql
     - assets/gpkg_tile_matrix_set.sql
+    - testdbs/gdal_sample.gpkg
+    - testdbs/tiles_3857.gpkg
 
   # To add assets to your application, add an assets section, like this:
   # assets:
