--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -1,6 +1,6 @@
 name: flutter_geopackage
 description: A module to support OGC geopackage with sqlite.
-version: 0.0.1
+version: 0.0.2
 homepage: https://www.hydrologis.com
 author: Andrea Antonello <andrea.antonello@gmail.com>
 repository: https://github.com/moovida/flutter_geopackage
@@ -15,15 +15,15 @@ dependencies:
 
   # The following adds the Cupertino Icons font to your application.
   # Use with the CupertinoIcons class for iOS style icons.
-  cupertino_icons: ^0.1.2
+  cupertino_icons: ^0.1.3
 
-  intl: ^0.16.0
-  dart_jts: #^0.0.5
-    git:
-      url: https://github.com/moovida/dart_jts.git
+  intl: ^0.16.1
+  dart_jts: ^0.0.5+1
+#    git:
+#      url: https://github.com/moovida/dart_jts.git
 
   # MIT
-  sqflite: ^1.1.7+2
+  sqflite: ^1.2.0
 
 
 dev_dependencies:
