--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -1,6 +1,6 @@
 name: flutter_geopackage
 description: A module to support OGC geopackage with sqlite.
-version: 0.0.2
+version: 0.0.2+1
 homepage: https://www.hydrologis.com
 author: Andrea Antonello <andrea.antonello@gmail.com>
 repository: https://github.com/moovida/flutter_geopackage
