--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -1,6 +1,6 @@
 name: flutter_geopackage
 description: A module to support OGC geopackage with sqlite.
-version: 0.0.2+1
+version: 0.0.3
 homepage: https://www.hydrologis.com
 author: Andrea Antonello <andrea.antonello@gmail.com>
 repository: https://github.com/moovida/flutter_geopackage
@@ -23,7 +23,7 @@ dependencies:
 #      url: https://github.com/moovida/dart_jts.git
 
   # MIT
-  sqflite: ^1.2.0
+  sqflite: ^1.3.0
 
 
 dev_dependencies:
