--- a/example/pubspec.yaml
+++ b/example/pubspec.yaml
@@ -34,6 +34,9 @@ dependencies:
 #    git:
 #      url: https://github.com/moovida/dart_jts.git
 
+  path_provider: any
+  path: any
+
 dev_dependencies:
   flutter_test:
     sdk: flutter
