--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -21,8 +21,13 @@ dependencies:
 #    git:
 #      url: https://github.com/moovida/dart_jts.git
 
+
   # MIT
-  sqflite: ^1.3.0
+  moor_ffi:
+    git:
+      url: https://github.com/moovida/moor.git
+      ref: develop
+      path: moor_ffi
 
 
 dev_dependencies:
