--- a/.travis.yml
+++ b/.travis.yml
@@ -16,7 +16,7 @@ dart_task:
 
 # Only building master means that we don't run two builds for each pull request.
 branches:
-  only: [master]
+  only: [master, moor_test]
 
 cache:
  directories:
