--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -9,13 +9,6 @@ environment:
   sdk: ">=2.1.0 <3.0.0"
 
 dependencies:
-  flutter:
-    sdk: flutter
-
-  # The following adds the Cupertino Icons font to your application.
-  # Use with the CupertinoIcons class for iOS style icons.
-  cupertino_icons: ^0.1.3
-
   intl: ^0.16.1
   dart_jts: ^0.0.5+2
 #    git:
@@ -29,32 +22,7 @@ dependencies:
       ref: develop
       path: moor_ffi
 
-
 dev_dependencies:
-  flutter_test:
-    sdk: flutter
-  pedantic: ^1.8.0+1
-  test: any
+  pedantic: ^1.9.0
+  test: ^1.14.2
 
-flutter:
-  uses-material-design: true
-
-  assets:
-    - assets/gpkg_contents.sql
-    - assets/gpkg_data_columns.sql
-    - assets/gpkg_geometry_columns.sql
-    - assets/gpkg_metadata.sql
-    - assets/gpkg_spatial_ref_sys.sql
-    - assets/gpkg_tile_matrix.sql
-    - assets/gpkg_data_column_constraints.sql
-    - assets/gpkg_extensions.sql
-    - assets/gpkg_metadata_reference.sql
-    - assets/gpkg_spatial_index.sql
-    - assets/gpkg_tile_matrix_set.sql
-
-
-
-  module:
-    androidX: true
-    androidPackage: com.hydrologis.flutter_geopackage
-    iosBundleIdentifier: com.hydrologis.flutterGeopackage
