--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -16,11 +16,11 @@ dependencies:
 
 
   # MIT
-  moor_ffi:
-    git:
-      url: https://github.com/moovida/moor.git
-      ref: develop
-      path: moor_ffi
+  moor_ffi: ^0.6.0
+    # git:
+    #   url: https://github.com/moovida/moor.git
+    #   ref: develop
+    #   path: moor_ffi
 
 dev_dependencies:
   pedantic: ^1.9.0
