--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -11,8 +11,8 @@ environment:
 dependencies:
   intl: ^0.16.1
 
-  dart_hydrologis_db:
-    path: ../dart_hydrologis_db/
+  dart_hydrologis_db: ^0.1.0
+    # path: ../dart_hydrologis_db/
 
   dart_jts: ^0.0.5+4
 #    git:
