--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -11,7 +11,7 @@ environment:
 dependencies:
   intl: ^0.16.1
 
-  dart_hydrologis_db: ^0.2.0
+  dart_hydrologis_db: ^0.2.1
     # path: ../dart_hydrologis_db/
     #  git:
     #    url: https://github.com/moovida/dart_hydrologis_db.git
@@ -31,4 +31,5 @@ dependencies:
 dev_dependencies:
   pedantic: ^1.9.0
   test: ^1.14.2
+  dart_hydrologis_utils: ^0.5.0
 
