--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -22,11 +22,7 @@ dependencies:
 
 
   # MIT
-  moor_ffi: ^0.7.0
-    # git:
-    #   url: https://github.com/moovida/moor.git
-    #   ref: develop
-    #   path: moor_ffi
+  sqlite3: ^0.1.4
 
 dev_dependencies:
   pedantic: ^1.9.0
