read tiles bounds properly, using matrix set bounds not always works

--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -20,6 +20,9 @@ dependencies:
 #    git:
 #      url: https://github.com/moovida/dart_jts.git
 
+  # MIT
+  proj4dart: ^1.0.5
+
 
 dev_dependencies:
   pedantic: ^1.9.0
