--- a/example/pubspec.yaml
+++ b/example/pubspec.yaml
@@ -20,10 +20,6 @@ dependencies:
   flutter:
     sdk: flutter
 
-  # The following adds the Cupertino Icons font to your application.
-  # Use with the CupertinoIcons class for iOS style icons.
-  cupertino_icons: ^0.1.3
-
   # MIT
   permission_handler: ^4.4.0+hotfix.2
 
@@ -35,6 +31,8 @@ dependencies:
 
   flutter_geopackage:
     path: ../../flutter_geopackage
+
+  dart_hydrologis_db: ^0.4.0
 
   # MIT
   proj4dart: 1.0.5
