--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -1,6 +1,6 @@
 name: flutter_geopackage
 description: A module to support OGC geopackage with sqlite.
-version: 0.4.3
+version: 0.4.3+1
 homepage: https://github.com/moovida/flutter_geopackage
 repository: https://github.com/moovida/flutter_geopackage
 issue_tracker: https://github.com/moovida/flutter_geopackage/issues
@@ -16,7 +16,7 @@ dependencies:
     #  git:
     #    url: https://github.com/moovida/dart_hydrologis_db.git
 
-  dart_jts: ^0.0.5+6
+  dart_jts: ^0.0.6
 #    git:
 #      url: https://github.com/moovida/dart_jts.git
 
@@ -27,5 +27,5 @@ dependencies:
 dev_dependencies:
   pedantic: ^1.9.0
   test: ^1.14.2
-  dart_hydrologis_utils: ^0.5.1
+  dart_hydrologis_utils: ^0.5.3
 
