try to support sqlite version choice

--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -11,6 +11,10 @@ environment:
 dependencies:
   intl: '>=0.16.1 <=0.17.0'
 
+  # MIT -> added to help chose dart_hydrologis_db the right version for the dev channel
+  #        can be removed once null-safety has been reached
+  sqlite3: '>=0.1.8 <=1.0.0'
+
   dart_hydrologis_db: ^0.6.2
     # path: ../dart_hydrologis_db/
     #  git:
