upgrade sqlite and version

--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -1,6 +1,6 @@
 name: flutter_geopackage
 description: A module to support OGC geopackage with sqlite.
-version: 0.5.1
+version: 0.5.2
 homepage: https://github.com/moovida/flutter_geopackage
 repository: https://github.com/moovida/flutter_geopackage
 issue_tracker: https://github.com/moovida/flutter_geopackage/issues
@@ -13,9 +13,9 @@ dependencies:
 
   # MIT -> added to help chose dart_hydrologis_db the right version for the dev channel
   #        can be removed once null-safety has been reached
-  sqlite3: '>=0.1.8 <=1.5.1'
+  sqlite3: ^1.8.0 #'>=0.1.8 <=1.5.1'
 
-  dart_hydrologis_db: ^0.7.1
+  dart_hydrologis_db: ^0.7.2
     # path: ../dart_hydrologis_db/
     #  git:
     #    url: https://github.com/moovida/dart_hydrologis_db.git
@@ -31,5 +31,5 @@ dependencies:
 dev_dependencies:
   lints: ^1.0.1
   test: ^1.20.1
-  dart_hydrologis_utils: ^0.6.0
+  dart_hydrologis_utils: ^0.6.1
 
