--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -13,16 +13,16 @@ dependencies:
 
   # MIT -> added to help chose dart_hydrologis_db the right version for the dev channel
   #        can be removed once null-safety has been reached
-  sqlite3: ^1.9.1
+  sqlite3: ^2.1.0
 
-  dart_hydrologis_utils: ^0.8.0
+  dart_hydrologis_utils: ^0.8.1
 
-  dart_hydrologis_db: ^1.0.1
+  dart_hydrologis_db: ^1.1.0
     # path: ../dart_hydrologis_db/
     #  git:
     #    url: https://github.com/moovida/dart_hydrologis_db.git
 
-  dart_jts: ^0.2.2+3
+  dart_jts: ^0.2.3
 #    git:
 #      url: https://github.com/moovida/dart_jts.git
 
